log/build_2024-04-23_15-29-03/robot/stderr.log
  File "/home/tractor/ws/install/robot/lib/python3.10/site-packages/robot/Locomotion.py", line 47
    from wpimath.units 
                       ^
SyntaxError: invalid syntax

